--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dialog.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dialog.scss
@@ -319,7 +319,7 @@
   flex-grow: 0;
   flex-shrink: 0;
   height: $dialog-title-height;
-  padding: 15px 20px;
+  padding: 15px 10px 15px 20px;
   position: relative;
   width: 100%;
 
@@ -330,7 +330,7 @@
     display: flex;
     height: 3rem;
     min-height: 3rem;
-    padding: 0 20px;
+    padding: 0 5px 0 20px;
   }
 }
 
